--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="profile-card">
     <!-- Profile Picture -->
-    <img src="images/profile.png" alt="Profile Picture" data-testid="profilePicture" class="profile-picture">
+    <img src="profile.png" alt="Profile Picture" data-testid="profilePicture" class="profile-picture">
     
     <!-- Full Name -->
     <h1 data-testid="fullName">Emm yanzo</h1>
